# Intelligent-Robotics-Assignments

./: README.MD
assignment1/: .gitignore  README.md
assignment1/detection/: CMakeLists.txt  package.xml
assignment1/detection/launch/: launch.launch
assignment1/detection/src/: debug.cpp
assignment1/detection/src/obstacle_detector/: circle.cpp  obstacle_extractor.cpp  point.cpp  (+2 more)
assignment1/navigation_automatic_ros/: CMakeLists.txt  package.xml
assignment1/navigation_automatic_ros/action/: MoveDetect.action
assignment1/navigation_automatic_ros/src/: TiagoClient_Debug.cpp  main_client.cpp  main_server.cpp  tiago_client.cpp  tiago_server.cpp
assignment1/navigation_commands_ros/: CMakeLists.txt  package.xml
assignment1/navigation_commands_ros/launch/: launch.launch
assignment1/navigation_commands_ros/src/: main_client.cpp  main_server.cpp  tiago_client_commands.cpp  tiago_server_commands.cpp
assignment1/tiago_iaslab_simulation/: CMakeLists.txt  package.xml
assignment2/: .gitignore  README.md
exercise5/: CMakeLists.txt  package.xml
exercise5/src/: solution_k_not_known.cpp
laser_scanner/: REAME.MD
laser_scanner/include/laser_scanner/: clusterizer.h
laser_scanner/src/: clusterizer.cpp  solution_k_known.cpp
report_presentation/assignment1/: bibliography.bib  main.tex  titlepage.tex
report_presentation/assignment1/chapters/: code_structure.tex  detection.tex  introduction.tex  narrow_passages.tex  references.tex
report_presentation/assignment2/: main.tex  titlepage.tex
report_presentation/assignment2/chapters/: assumptions.tex  packages.tex
(+11 files in other folders)
