<?xml version="1.0"?>
<package format="2">
    <name>tiago_iaslab_simulation</name>
    <version>0.1.1</version>
    <description>The tiago_iaslab_simulation package</description>

    <maintainer email="alberto.gottardi@phd.unipd.it">Alberto Gottardi</maintainer>
    <author email="alberto.gottardi@phd.unipd.it">Alberto Gottardi</author>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>gazebo_ros</depend>

    <export>
    <gazebo_ros
        gazebo_plugin_path="${prefix}/lib"
        gazebo_media_path="${prefix}"
        gazebo_model_path="${prefix}/models:${prefix}/..:${prefix}"/>
    </export>


</package>